Add general availability calendar